Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <div class="swiper-slide">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://pixabay.com/get/gfc3cdbd48a5b522db7cfe7d3d09d647ac60cd5cce3b76cdf174b5197f64135332b5e0998b833aaa11454bd28307f4401252df45775e2e0841340fc22a82da9ce_1280.jpg" alt="Water drilling machinery project" loading="lazy">
+                                <img src="/assets/header.webp" alt="Water drilling machinery project" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Commercial Borehole Project</h3>
@@ -253,7 +253,7 @@
                     <div class="swiper-slide">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://pixabay.com/get/gb2678ad55b0aba67f2b8031e026d035c98d4bbd174655561adb26ff6506eec61ad0c4b69238b175f336f8310c7a68858_1280.jpg" alt="Drilling machinery in operation" loading="lazy">
+                                <img src="/assets/beautiful-african-women-fetching-water.webp" alt="Drilling machinery in operation" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Residential Installation</h3>
@@ -264,7 +264,7 @@
                     <div class="swiper-slide">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://pixabay.com/get/g2406d30356bd6fa9603064cd658757ffe066186ffbfc9b3581561668a3d0867acdf6f58bc64434b34b2d71929a8984802008392e1d7cf33c3c041e6d3893207f_1280.jpg" alt="Borehole installation" loading="lazy">
+                                <img src="/assets/close-up-hands-washing.webp " alt="close-up-hands-washing" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>School Water System</h3>
@@ -275,7 +275,7 @@
                     <div class="swiper-slide">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://pixabay.com/get/g761971aa9c3bee0af87bd5d13b30efbb74dbf610131de13e4da17e3dd3b8130242588012e5d4fb4619ef96f27e4b9ecba0623c433c16f3a1261af093a56a1a18_1280.jpg" alt="Overhead water tank" loading="lazy">
+                                <img src="/assets/tank.webp" alt="Overhead water tank" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Overhead Tank Construction</h3>
@@ -286,7 +286,7 @@
                     <div class="swiper-slide">
                         <div class="project-card">
                             <div class="project-image">
-                                <img src="https://pixabay.com/get/g8a2d3dc53dc25b5d87e9ec372d198e3dd7bcc664c0dbc22f67cb7345888e0302ee8251c0e45e3ce68b4ed40191f17e8a6fe576cced519b90b071f1b2635afe69_1280.jpg" alt="Plumbing services" loading="lazy">
+                                <img src="/assets/selective-focus-grunge-rusty-faucet-rural-area.webp" alt="Plumbing services" loading="lazy">
                             </div>
                             <div class="project-info">
                                 <h3>Commercial Plumbing</h3>
@@ -465,7 +465,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/2348097379865" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+    <a href="https://wa.me/+2348097379865" class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
